feat:rewrote ts entirely bc the code was bad
