# server/src/business-layer/models/Reagent.ts
@@ -2,20 +2,17 @@ export type ReagentTradingType = "trade" | "giveaway" | "sell"
 
 export type ReagentCategory = "chemical" | "hazardous" | "biological"
 
-export type ReagentVisibility = "everyone" | "region" | "institution"
-
 export interface Reagent {
   user_id: string
   name: string
   description: string
+  condition: string
   price?: number
   quantity: number
-  unit: string
   expiryDate: string
   tradingType: ReagentTradingType
   images?: string[]
   categories: ReagentCategory[]
-  visibility: ReagentVisibility
   location: string
   createdAt: Date
 }
