# server/src/service-layer/dtos/request/ReagentRequest.ts
@@ -1,17 +1,15 @@
 import type {
   ReagentCategory,
   ReagentTradingType,
-  ReagentVisibility,
 } from "business-layer/models/Reagent"
 
 export interface CreateReagentRequest {
   name: string
   description: string
+  condition: string
   categories: ReagentCategory[]
-  visibility: ReagentVisibility
   price?: number
   quantity: number
-  unit: string
   expiryDate: string
   tradingType: ReagentTradingType
   location: string
